fixed some overlapping

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,6 +18,7 @@
   top: 0;
   left: 0;
   display: none;
+  z-index: 1001;
 }
 
 .modal-container {
